Part of fix for bug 16813 -- line termination problems with forms. r=pollman, rickg.